--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ flutter:
     - assets/DA.png
     - assets/JARKOM.png
     - assets/STATISTIKA.png
+    - assets/Group151.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
